Set theme jekyll-theme-minimal

--- a/_config.yml
+++ b/_config.yml
@@ -155,4 +155,4 @@ disqus:
   # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
   shortname: my_disqus_shortname
 
-theme: jekyll-theme-tactile
+theme: jekyll-theme-minimal
